mabye this will fix the x spacing?

--- a/Main.css
+++ b/Main.css
@@ -77,8 +77,8 @@
 #tempbutton {
   width: 5vw !important;
   height: 5vw !important;
-  margin-left: 12vw !important;
-  margin-top: 1vw !important;
+  margin-left: 24% !important;
+  margin-top: 2% !important;
 }
 
 #tempbutton img{
